--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://www.gstatic.com/firebasejs/5.4.0/firebase.js"></script>
     <title>Baseline</title>
     
@@ -14,32 +13,31 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="style.css" rel="stylesheet">
+    <link href="./assets/style.css" rel="stylesheet">
 
 </head>
 
   <body id="page-top">
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-        <div class="container">
-          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" id="developers">Developers</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link js-scroll-trigger" id="about">About</a>
-                </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-  
-  
+ <!-- Navigation -->
+ <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+  <div class="container">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#developers">Developers</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
     <header class="masthead text-center text-white d-flex">
       <div class="container my-auto">
         <div class="row">
@@ -60,7 +58,7 @@
         </button>
       </div>
       <div class="UserInputBody p-3">
-          <form>
+          <form id="userInfo">
               <div class="form-group">
                 <label for="UserName">Name</label>
                 <input type="text" class="form-control" id="userName" placeholder="Maybe later have some authentication here?">
@@ -92,7 +90,7 @@
       </div>
       <div class="UserInputFooter">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" id="formSubmitButton">Submit</button>
+        <button type="button" class="btn btn-primary" id="formSubmitButton" data-dismiss="modal">Submit</button>
       </div>
     </div>
   </div>
@@ -136,6 +134,40 @@
    </div>
  </div>
     </header>
+  <!--- nav bar about baseline About-->
+    <section class="bg-primary" id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto text-center">
+            <h2 class="section-heading text-white">-What were doing at Baseline-</h2>
+            <hr class="light my-4">
+            <p class="text-faded mb-4">Have you ever wondered whether you were presenting your best and most positive face to the world? Evaluating your own appearance can be difficult, but more difficult is finding someone willing to give advice in this sensitive area, assuming you even want to hear such advice!
+              <br><br>
+              Baseline can help! Submit a photo of yourself to the Baseline app, and it will be a truly dispassionate and perfectly consistent judge, returning scores from the Face++ API algorithms quantifying "emotion" and "beauty". When submitting the photo you are asked for your current status in the job market, and any other comments you wish to include. With this information, you can track whether you are getting better at presenting an attractive and cheerful face to the world. If you are satisfied with your appearance, Baseline's ongoing feedback can warn you that you're revealing more than you think.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+<!--- nav bar Developers-->
+<section class="bg-primary" id="developers">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 mx-auto text-center">
+        <h2 class="section-heading text-white">Developers</h2>
+        <hr class="light my-4">
+        <p class="text-faded mb-4">
+          <p><a href="https://jordancoon.github.io/Bootstrap-Portfolio/">Jordan Coon</a></p>
+          <p><a href="url">Michael cumings</a></p>
+          <p><a href="url">Ugonna Ojiaku</a></p>
+          <p><a href="url">Geoffrey Hanson</a></p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
     <footer class="footer">
       &copy; Copyright 2018 BASELINE
     </footer>
@@ -145,11 +177,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script type="text/javascript" src="http://platform.linkedin.com/in.js"></script>
-  <script
-  src="https://code.jquery.com/jquery-3.3.1.js"
-  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-  crossorigin="anonymous"></script>
-    <script src="app.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script src="./assets/app.js"></script>
 </body>
 
 </html>
