--- a/index.html
+++ b/index.html
@@ -58,10 +58,13 @@
         </button>
       </div>
       <div class="UserInputBody p-3">
-          <form id="userInfo">
+          <form id="userInfo" name="userInfo">
               <div class="form-group">
                 <label for="UserName">Name</label>
-                <input type="text" class="form-control" id="userName" placeholder="Maybe later have some authentication here?">
+                <div id="userName"></div>
+              </div>
+              <div class="form-group">
+                <a class="btn btn-primary" href="login.html">Log in as a different user</a>
               </div>
               <div class="form-group">
                 <label for="lookingOrNot">Are you seeking a new job?</label>
@@ -108,7 +111,7 @@
       <div class="card-footer">
         <p class="card-text">
           <!-- Button triggering modal -->
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#userinput">
+          <button type="button" id="modalTrigger" class="btn btn-primary" data-toggle="modal" data-target="#userinput">
           Submit a new picture!
         </button></p>
       </div>
@@ -119,7 +122,7 @@
       <div class="card-header">
         Results
       </div>
-      <div class="card-body h-75">
+      <div class="card-body h-75" style="overflow-y: scroll;">
       <div id="pastResults">
       <p class="card-text">This is the div where the current and past results go.</p>
       </div> 
@@ -129,6 +132,10 @@
           <button type="button" class="btn btn-primary" id="linkedinButton">
               Make this my LinkedIn profile pic!
             </button>
+            <br>
+          <button type="button" class="btn btn-primary" id="pastResultsButton">
+              View my past results!
+          </button>
        </div>
      </div>
    </div>
@@ -139,7 +146,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">-What were doing at Baseline-</h2>
+            <h2 class="section-heading text-white">-What we're doing at Baseline-</h2>
             <hr class="light my-4">
             <p class="text-faded mb-4">Have you ever wondered whether you were presenting your best and most positive face to the world? Evaluating your own appearance can be difficult, but more difficult is finding someone willing to give advice in this sensitive area, assuming you even want to hear such advice!
               <br><br>
@@ -158,7 +165,7 @@
         <hr class="light my-4">
         <p class="text-faded mb-4">
           <p><a href="https://jordancoon.github.io/Bootstrap-Portfolio/">Jordan Coon</a></p>
-          <p><a href="url">Michael cumings</a></p>
+          <p><a href="url">Michael Cumings</a></p>
           <p><a href="url">Ugonna Ojiaku</a></p>
           <p><a href="url">Geoffrey Hanson</a></p>
       </div>
